setup everything to deploy missing fill object with functinos so we can call all of them on the fly

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,14 @@ body,
 html {
     margin: 0;
     overflow: hidden;
+    background-color: darkslategray;
+    color: white;
+}
+p {
+    margin: 0;
+}
+a {
+    color: white;
 }
 
 #default-webgl {
