--- a/src/routes/canvas.css
+++ b/src/routes/canvas.css
@@ -15,6 +15,62 @@
     transform: scaleX(0);
     transform-origin: top left;
     transition: transform 0.5s;
-    /* improve performances */
-    will-change: transform;
+    will-change: transform; /* improve performances */
+}
+
+/**
+* mixWebGLAndHTMLExample route
+*/
+
+.point {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+}
+
+.point .label,
+.point .text {
+    font-family: Helvetica, Arial, sans-serif;
+
+    line-height: 40px;
+    font-weight: 100;
+    font-size: 14px;
+}
+.point .label {
+    position: absolute;
+    top: -20px;
+    left: -20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background: #00000077;
+    border: 1px solid #ffffff77;
+    color: #ffffff;
+    text-align: center;
+    cursor: help;
+    transform: scale(0, 0);
+    transition: transform 0.3s;
+}
+.point .label:hover + .text {
+    opacity: 1;
+}
+
+.point .text {
+    position: absolute;
+    top: 30px;
+    left: -120px;
+    width: 200px;
+    padding: 20px;
+    border-radius: 4px;
+    background: #00000077;
+    border: 1px solid #ffffff77;
+    color: #ffffff;
+    line-height: 1.3em;
+    opacity: 0;
+    transition: opacity 0.3s;
+    pointer-events: none;
+}
+
+.point.visible .label {
+    transform: scale(1, 1);
 }
